--- a/AddUp/Base.lproj/LaunchScreen.storyboard
+++ b/AddUp/Base.lproj/LaunchScreen.storyboard
@@ -6,8 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,19 +21,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addup.png" translatesAutoresizingMaskIntoConstraints="NO" id="OXI-DI-8xi">
-                                <rect key="frame" x="88" y="160.5" width="199" height="72"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="OXI-DI-8xi" secondAttribute="height" multiplier="199:72" id="rNi-37-NsJ"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launch.png" translatesAutoresizingMaskIntoConstraints="NO" id="hAA-ly-XoQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.47058823529999999" green="0.54117647059999996" blue="0.035294117649999998" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="OXI-DI-8xi" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="3En-la-MZR"/>
-                            <constraint firstItem="OXI-DI-8xi" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-137" id="eZa-XV-fcd"/>
-                            <constraint firstItem="OXI-DI-8xi" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.5306" id="jfq-uz-qm0"/>
-                        </constraints>
+                        <color key="backgroundColor" red="0.90478732250000005" green="1" blue="0.81549934980000005" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -44,6 +35,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="addup.png" width="628" height="176"/>
+        <image name="launch.png" width="750" height="1334"/>
     </resources>
 </document>
